# async_fastapi_poc

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/alembic/: env.py
src/alembic/versions/: 20260415_1906_094fca4ab342.py
src/app/: crud.py  db.py  main.py  models.py  schemas.py
src/app/api/: users.py
src/migrations/: env.py
src/migrations/versions/: 20260415_1906_094fca4ab342.py
src/tests/: conftest.py  test_users.py
