[project]
name = "async-fastapi-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.20.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "B008", "COM812", "D104", "D107", "D203", "D213", "D413"]
per-file-ignores = { "src/tests/*" = ["S101"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
